fix: change letter-spacing & logo title

--- a/shelter/pages/main/styles/base/_typography.scss
+++ b/shelter/pages/main/styles/base/_typography.scss
@@ -26,7 +26,8 @@
 }
 
 h2.title {
-	font-size: 44px; 
+	font-size: 44px;
+	letter-spacing: normal;
 }
 
 h4.title {		
