--- a/shelter/pages/main/styles/main.css
+++ b/shelter/pages/main/styles/main.css
@@ -91,6 +91,7 @@ select {
 
 h2.title {
   font-size: 44px;
+  letter-spacing: normal;
 }
 
 h4.title {
